--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -38,7 +38,7 @@ main, .header, .footer {
 main {
     min-height: 100vh;
     padding-top: 55px;
-    padding-bottom: 35px;
+    padding-bottom: 50px;
     margin: 0 auto;
     background-color: #fff;
 }
@@ -62,6 +62,11 @@ main {
 table, th, td {
     border: 1px solid #a5a5a5;
     padding: 2px 5px;
+}
+
+.bg-active {
+    background-color: rgba(32, 75, 214, 0.3);
+    color: #333;
 }
 
 footer{
