--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,14 @@
-body {
-    background-color: #afafaf;
+:root {
+    --header-height : 50px ;
+    --footer-height : 30px ;
+    --color-primary : #0d6efd ;
+    --color-bg-primary : #bcd7ff ;
 }
 
+body {
+    background-color: #afafaf;
+
+}
 table {
     border-collapse: collapse;
 }
@@ -10,7 +17,7 @@ header{
     background-color: #333;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: var(--header-height);
 }
 
 main, .header, .footer {
@@ -37,8 +44,8 @@ main, .header, .footer {
 
 main {
     min-height: 100vh;
-    padding-top: 55px;
-    padding-bottom: 50px;
+    padding-top: calc(var(--header-height) + 5px);
+    padding-bottom: calc(var(--footer-height) + 20px);
     margin: 0 auto;
     background-color: #fff;
 }
@@ -65,8 +72,30 @@ table, th, td {
 }
 
 .bg-active {
-    background-color: rgba(32, 75, 214, 0.3);
+    background-color: var(--color-bg-primary);
     color: #333;
+}
+
+.radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.radio-toolbar label {
+    display: inline-block;
+    background-color: #fff;
+    height: 23px;
+    line-height: 23px;
+    margin-top: 2px;
+    padding: 0 10px;
+    border: 1px solid #919191;
+    text-align: center
+}
+
+.radio-toolbar input[type="radio"]:checked+label {
+    background-color: var(--color-bg-primary);;
+    border-color: var(--color-primary);
 }
 
 footer{
@@ -78,7 +107,7 @@ footer{
 
 .footer {
     padding: 5px 10px;
-    height: 30px;
+    height: var(--footer-height);
     margin: 0 auto;
     color: #fff;
 }
