--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,7 @@ small {
 .form-control {
     display: block;
     width: 100%;
-    padding: 0.25rem 0.3rem;
+    padding: 0.25rem 0.3rem!important;
     font-weight: 400;
     line-height: 1;
     color: #212529;
